public/stylesheets/events.css
/* ... */
div#news-lab-events section.people ul li {	
  padding: 10px 0 5px 10px;
  margin-bottom: 5px;
  overflow: auto;
}
div#news-lab-events section.people ul li:last-child {
  margin-bottom: 0;
}
div#news-lab-events section.people ul article header{
  position: absolute;
  left: -9999px;	
}
div#news-lab-events section.people ul article div.figure {
  width: 95px;
  float: left;
}
div#news-lab-events section.people ul article figure {
  width: 95px;
  height: 95px;
  overflow: hidden;	
}
div#news-lab-events section.people ul article div.figure img {
  width: 100%;	
}
div#news-lab-events section.people ul article ul {
  font-size: 1em;
  padding: 0;
  float: left;
  margin-left: 15px;
  width: 50%;
}
div#news-lab-events section.people ul article ul li {
    margin: 0;
    padding: 0;
}
div#news-lab-events section.people ul article ul li b {
  font-weight: 800;
}
div#news-lab-events section.people article a.profile {
  display: block;    
  width: 95px;
  height: 20px;
  font-size: 1em;
  font-weight: 800;
  color: #ffffff;
  text-align: center;
  padding: 5px 0;
  margin-top: -3px;
}
div#news-lab-events section.articles {
  border-top-style: solid;
  border-top-width: 3px;
  border-top-color: #cc0000;
}
div#news-lab-events section.articles ol {
  counter-reset: li;
}
div#news-lab-events section.articles ol li {
  position: relative;
}
div#news-lab-events section.articles ol li a {
  display: block;
  font-size: 1em;
  font-weight: 800;  
  background-color: #f0f0f0;	
  margin-bottom: 1px;
  padding: 16px 0 11px 7px;
  width: 100%;
}
div#news-lab-events section.articles ol li a span {
  display: block;
  width: 85%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #156292;
}
div#news-lab-events section.people section.articles ol li a span {
  display: block;
  width: 75%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #ffffff;
}
div#news-lab-events section.articles ol li:nth-child(n) a:after {
  content: counter(li);
  counter-increment: li;
  position: absolute;
  top: 15px;
  right: 4%;
  font-size: 2em;
  font-weight: 700;
  color: #f68b23;
}
/* Nested Articles module */
div#news-lab-events section.people ul li section.articles header{
  position: static;
  margin-top: 10px;
}
div#news-lab-events section.people ul li section.articles header h2 {	
  font-size: 1em;
  font-weight: 400;
  padding: 5px 5px 5px 10px;	
  margin-right: 10px;
}
div#news-lab-events section.people ul section.articles {
  clear: both;
  border-top: none;
}
div#news-lab-events section.people ul section.articles article ul {
  width: auto;	
}
div#news-lab-events section.people ul section.articles li {
  padding: 0;
  margin-bottom: 0;
  margin-right: 10px;
}
div#news-lab-events section.people ul section.articles ol li a {
  font-size: 1em;
  font-weight: 400;	
  margin-bottom: 1px;
  padding: 5px 5px 5px 10px;	
}
div#news-lab-events section.people ul section.articles ol li {
  overflow: hidden;
}
div#news-lab-events section.people ul section.articles ol li:nth-child(n) a:after {
  content: none;
}

div#news-lab-events section.timeline .content {
  font-size: 1.4rem;
  text-align: center;
  background-color: #f0f0f0;
}
div#news-lab-events section.timeline div.timeline-mockup {
	padding-bottom: 30px;
	width: 100%;
	height: 334px;
	text-align: center;
	background: #f0f0f0 url('../images/event/timeline-mockup-320-view.jpg') no-repeat center 15px; 
}
div#news-lab-events section.timeline h3 {
  padding-top: 10px;
  font-weight: 800;
}
div#news-lab-events section.timeline a.cta {
  display: block;
  color: #505050;
  background-color: #dcdcdc;
  font-weight: 800;
  padding: 6px 0;	
}
/* Footer */
footer {
  color: #fff;
}
#footer-content {
  padding: 1em 0;
}
#footer-content p {
  margin: 0;
}
/* GMap */
div#news-lab-events section.places #map h3 strong {
    font-weight: 800;
}
div#news-lab-events section.places #map ul{
    padding:5px;
}
div#news-lab-events section.places #map ul li a{
   font-weight: 800; 
}
div#news-lab-events section.places #map ul li a:hover{
   text-decoration:underline;     
}
/* For events index page */
.index-events{
  background-color:lightgrey;
  font: 18px/1.5 sans-serif;
  padding: 20px;
  margin: 5px;
}
.index-events li{
  background-color:lightgrey;
  margin: 5px; 
  padding:10px;
  list-style-type:square
}
.index-events li a{
  padding:5px;
  text-decoration:underline;
}
/* Page header */
header.banner{
  background: #cd0102 url('http://news.bbcimg.co.uk/view/1_4_35/cream/hi/news/img/red-masthead.png') repeat-x scroll center top;
  min-height: 100px;
}
#global-header {
  background-color: #520000;
}
#events-header {
  color: #fff;
}
#events-header a {
  color: #fff;
}
/* Tabs */
.tabs li {
  background-color: lightgrey;
}
.tabs li.open{
  background-color:white;   
}
.solid{
  background-color: darkgrey;
}
/* Page layout */
div#news-lab-events article.intro header h1{
  color: #000000;
  background: #ffffff;
  margin-top: 141px;
  min-height: 2em;
}
/* Breaking news CTA */
div#news-lab-events .cta {
  display: block;
  font-size: 1em;
  font-weight: 800;
  margin: 5px 0 17px 10px;
  background-color: #ffffff;
}
div#news-lab-events .icon.live {
  position: relative;
  background-color: #cc0101;
  font-size: 0.8em;
  font-weight: 400;	
  letter-spacing: -0.0425em;
  line-height: 1em;    
  padding: 0.2em 0.33em 0 0.33em;
  top: -2px;	
}
div#news-lab-events .icon.live b {
    color: #ffffff;
}
div#news-lab-events .cta time {
  font-weight: 400;
  color: #6daa17;
  font-style: italic;
}
div#news-lab-events section header.section h2 {
  background-color: #dcdcdc;
}
div#news-lab-events section header.section h2 a {
  color: #505050;		
}
div#news-lab-events section.no-slider header h2 {
  background: #dcdcdc !important;
}
div#news-lab-events section.open header h2 {	
  background: #dcdcdc url('../images/event/icons-sprite.gif') no-repeat 95% 0; 
}
/* ... */

